api pull definetly works, but coverage of Trump and Harris way beyond YouTube allocation

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # I know this is more for data science/ML projects, but I wanted a way to document my implementation of new tech e.g. my first Google Cloud registration
 jupyter
 
-
+# needed to increment API searches
+datetime
